--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-channel = "1.5.1"
 async-executor = "1.4.0"
 async-net = "1.5.0"
 async-std = "1.7.0"
+crossfire = "0.1.4"
 futures-lite = "1.11.2"
 multiqueue = "0.3.2"
 rental = "0.5.5"
